fix styling issue on IE on review screen & another bug which cause 403 to happen on all browsers

--- a/src/components/register-my-baby/steps/review/review.scss
+++ b/src/components/register-my-baby/steps/review/review.scss
@@ -45,12 +45,14 @@
     padding: 15px 0;
     border-top: 1px solid #ccc;
     > div {
+      flex: 1 0 90%;
       display: flex;
       flex-direction: column;
     }
 
     button.field-edit-btn {
       padding: 5px 10px;
+      margin-left: 5px;
       border: 1px solid #ccc;
       border-radius: 5px;
       background-color: #fff;
